<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
        <import type="android.view.View"/>
        <variable
            name="qrCodeClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="viewModel"
            type="org.devsonics.activities.assistant.viewmodels.RemoteProvisioningViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/top_bar_fragment"
            android:name="org.devsonics.activities.assistant.fragments.TopBarFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:layout_alignParentTop="true"
            tools:layout="@layout/assistant_top_bar_fragment" />

        <LinearLayout
            android:layout_below="@id/top_bar_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/standard_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/assistant_remote_provisioning_title"
                android:textAllCaps="false" />

            <TextView
                style="@style/standard_small_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="center"
                android:textColor="@color/blue_7A"
                android:textSize="@dimen/_14sdp"

                android:layout_gravity="top"

                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/assistant_remote_provisioning_desc" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout"
                android:layout_marginTop="@dimen/_35sdp"
                android:theme="@style/Theme.MaterialComponents.Light.Bridge"
                style="@style/TextInputLayoutStyle"
                app:boxStrokeColor="@color/black_color"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/blue"
                app:boxStrokeWidthFocused="1dp"
                app:endIconDrawable="@drawable/cross_fetch_remote"
                app:endIconTint="@color/app_color"
                app:endIconMode="clear_text"
                android:hint="@string/assistant_remote_provisioning_url">

                <com.google.android.material.textfield.TextInputEditText
                    errorMessage="@={viewModel.urlError}"
                    urlConfirmationValidation="@{true}"
                    android:text="@={viewModel.urlToFetch}"
                    android:imeOptions="actionDone"
                    android:id="@+id/editText"
                    android:singleLine="true"
                    android:inputType="textUri"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:onClick="@{() -> viewModel.fetchAndApply()}"
                android:enabled="@{viewModel.fetchEnabled}"
                android:text="@string/assistant_fetch_apply"
                android:background="@drawable/bg_gray_rounded"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@null"
                style="@style/button_font"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:onClick="@{qrCodeClickListener}"
                android:text="@string/assistant_launch_qrcode"
                style="@style/button_font"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/notification_text"
                android:textSize="@dimen/_12sdp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_150sdp"/>

        </LinearLayout>

        <include
            layout="@layout/wait_layout"
            bind:visibility="@{viewModel.fetchInProgress}"/>

    </RelativeLayout>

</layout>
