<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="editClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="videoTouchListener"
            type="android.view.View.OnTouchListener" />
        <variable
            name="viewModel"
            type="org.devsonics.activities.main.recordings.viewmodels.RecordingsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:layout_gravity="center_horizontal"
            android:background="@color/notification_text"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:contentDescription="@string/content_description_go_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"

                android:src="@drawable/ic_back_arrow" />

            <TextView
                style="@style/accent_colored_title_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_14sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:padding="15dp"
                android:text="@string/recordings"/>

            <ImageView
                android:onClick="@{editClickListener}"
                android:enabled="@{!viewModel.recordingsList.empty}"
                android:contentDescription="@string/content_description_enter_edition_mode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:padding="15dp"
                android:src="@drawable/ic_delete_top" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/list_edit_top_bar_fragment"
            android:name="org.devsonics.activities.main.fragments.ListTopBarFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:layout_alignTop="@id/top_bar"
            tools:layout="@layout/list_edit_top_bar_fragment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recordings_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_bar"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_box"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:visibility="@{viewModel.recordingsList.empty ? View.VISIBLE : View.GONE}"
            android:layout_centerHorizontal="true"
            />

        <TextView
            style="@style/empty_list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
         android:layout_below="@+id/imageView5"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/recordings_empty_list"
            android:textColor="@color/blue_8F"
            android:textSize="@dimen/_12sdp"
            android:visibility="@{viewModel.recordingsList.empty ? View.VISIBLE : View.GONE}" />

        <TextureView
            android:id="@+id/recording_video_surface"
            android:onTouch="@{videoTouchListener}"
            android:visibility="@{viewModel.isVideoVisible ? View.VISIBLE : View.GONE, default=gone}"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</layout>